Added comments regarding versions used in distribution decoding analysis

--- a/Python/Distribution Decoding Analysis.ipynb
+++ b/Python/Distribution Decoding Analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -21,16 +21,16 @@
    "outputs": [],
    "source": [
     "# Imports used in decoding\n",
-    "import numpy as np\n",
-    "import scipy.optimize\n",
+    "import numpy as np #version 1.18.5\n",
+    "import scipy.optimize #version 1.4.1\n",
     "\n",
     "# Imports used in simulations\n",
-    "import sklearn\n",
+    "import sklearn #version 0.23.2\n",
     "import sklearn.linear_model\n",
     "\n",
     "# Imports used in visualization\n",
-    "import seaborn as sns\n",
-    "from matplotlib import pyplot as plt\n"
+    "import seaborn as sns #version 0.10.1\n",
+    "from matplotlib import pyplot as plt #version 3.3.1"
    ]
   },
   {
@@ -2781,7 +2781,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
